# Crystals

./: .gitignore  README.md  meson.build
config/system.d/: com.cuarzo.Crystals.conf
scripts/: CONFIG  clean.sh  install.sh  uninstall.sh
src/: Crystals.pro  main.cpp
src/Core/: Compositor.cpp  Compositor.h  Log.cpp  Log.h  Types.cpp  Types.h
src/Effects/: SurfaceBlurManager.cpp  SurfaceBlurManager.h
src/Roles/: SubsurfaceRole.cpp  SubsurfaceRole.h  Surface.cpp  Surface.h  ToplevelRole.cpp  ToplevelRole.h
src/Scene/: Scene.cpp  Scene.h  SurfaceView.cpp  SurfaceView.h
src/Seat/: Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h
src/code/: Compositor.cpp  Compositor.h  Output.cpp  Output.h  Pointer.cpp  Surface.cpp  Surface.h  SurfaceView.cpp  SurfaceView.h  ToplevelRole.cpp  ToplevelRole.h  View.cpp  View.h
src/core/: Application.cpp  Application.h  Compositor.cpp  Compositor.h  Global.cpp  Global.h
src/effects/: SurfaceBlurManager.cpp  SurfaceBlurManager.h
src/roles/: Surface.cpp  Surface.h
src/seat/: Output.cpp  Output.h
src/ui/: Scene.cpp  Scene.h  SurfaceView.cpp  SurfaceView.h
src/utils/: Converter.cpp  Converter.h
